# nba-player-fingerprints

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
R/: report_helpers.R
docs/: app_data_contract.md  data_sources.md  feature_dictionary.md  project_design.md
reports/: player_fingerprint_report.qmd
site/: README.md  index.html
site/app/: index.html
src/nba_fingerprints/: __init__.py  cli.py
src/nba_fingerprints/app/: __init__.py  contracts.py  static_app.py
src/nba_fingerprints/data/: cache.py  nba_api_client.py
src/nba_fingerprints/features/: __init__.py  archetypes.py  fingerprints.py  normalization.py  player_season.py  positions.py  schema.py  scoring_style.py
src/nba_fingerprints/models/: __init__.py  neighbors.py  similarity.py  summaries.py
src/nba_fingerprints/pipelines/: __init__.py  player_season_exports.py
src/nba_fingerprints/visualization/: __init__.py
tests/: __init__.py  test_app_contracts.py  test_archetypes.py  test_cache.py  test_fingerprints.py  test_nba_api_client.py  test_neighbors.py  test_normalization.py  test_player_season_exports.py  test_player_season_features.py  test_positions.py  test_schema.py  test_scoring_style.py  test_similarity.py  test_static_app.py  test_summaries.py
