[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-player-fingerprints"
version = "0.1.0"
description = "NBA player-season fingerprints for similarity, archetypes, and outlier analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nba_api",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.scripts]
nba-fingerprints = "nba_fingerprints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
